...
  'main.chat.deleteAll': 'Delete all',
  'main.chat.deleteAll.confirmation':
    'Are you sure you want to delete all banned chats? This action cannot be undone.',
  'main.chat.deleteAll.error': 'Deleting failed',
  'main.chat.navigation.archived': 'Archived',
  'main.chat.navigation.banned': 'Banned',
  'main.chat.report': 'Report',
  'main.chat.send.failure': 'Sending message failed',
  'main.chat.unban': 'Restore chat',
  'main.chat.unban.confirmation': 'Are you sure you want to restore this user?',
  'main.chat.unban.confirmation.button': 'Restore',

  'main.mentor.other': 'I can also support with:',
...
  'main.mentor.story': 'My story',
  'main.mentor.subject': 'Subject:',

  'main.mentorCardExpanded.button': 'Chat',
  'main.mentorList.title': 'Mentors',

  'main.mentorsTitleAndSearchButton': 'Search',
  'main.mentorsTitleAndSearchButtonFiltersActive': 'Filters',
  'main.searchMentor.resetButton': 'Reset',
  'main.searchMentor.searchField.placeholder': 'Type in keyword',
  'main.searchMentor.shouldHideInactiveMentors': 'Hide inactive mentors',
  'main.searchMentor.showButton': 'Show',
  'main.searchMentor.title': 'Search',

  'main.settings.account.displayName': 'Display name',

  'main.settings.account.email.change': 'Change email',
  'main.settings.account.email.fail': 'Changing email failed!',
...

  'main.userreport.bodyText1':
    'Report a mentor if you detect criminal or wrongful activity violating SOS-Lapsikylä rules or values',
  'main.userreport.bodyText2':
    'SOS-Lapsikylä representative will contact you after the investigation. Your contact information will be used accordingly and won’t be admitted to outside parties',
  'main.userreport.contact.label': 'Contact information',
  'main.userreport.description.label': 'Reason for reporting *',
  'main.userreport.description.validationerror':
    'The reason for reporting is a mandatory field.',
  'main.userreport.failure.toast': 'Sending report failed',
  'main.userreport.send.button': 'Report',
  'main.userreport.success.toast':
    'SOS-Lapsikylä representative will contact you after the investigation.',
  'main.userreport.title': 'Report',

  'main.version.not.big.enough.button': 'Update',
  'main.version.not.big.enough.text':
...
    'Entering your email address will help you retrieve your password later, in case you lose it. We will not use it for anything else.',
  'onboarding.email.inputTitle': 'Email (optional)',
  'onboarding.email.nextButton': 'Continue',
  'onboarding.email.title': 'Email',

  'onboarding.mentorlist.lowerTitle': 'Mentors',
  'onboarding.mentorlist.start': 'Get started',

  'onboarding.privacyPolicy.agreeButton': 'I agree',
  'onboarding.privacyPolicy.bodyText1':
    'We only use your data and message history to make this service possible. We follow high security standards and do our best to keep your conversations private and safe.',
  'onboarding.privacyPolicy.bodyText2':
    'Please note that we use anonymous statistics to evaluate the service and its usefulness.',
...
    'By continuing you agree to trust us with your data. Read these for more details:',
  'onboarding.privacyPolicy.link': 'About privacy policy',
  'onboarding.privacyPolicy.nextButton': 'Continue',
  'onboarding.privacyPolicy.switch': 'I agree to the privacy policy',
  'onboarding.privacyPolicy.title': 'Data Privacy & Security',

  'onboarding.sign.in': 'Sign in',
  'onboarding.sign.in.admin': 'Admin-login',
  'onboarding.sign.in.admin.info': 'Are you not an admin?',
  'onboarding.sign.in.admin.link': 'Login as a regular user',
  'onboarding.sign.up': 'Sign up',

  'onboarding.signIn.button': 'Login',
...
  'onboarding.signUp.error.userNameLong': 'Username is too long',
  'onboarding.signUp.error.userNameShort': 'Username is too short',
  'onboarding.signUp.error.userNameTaken': 'Username is taken',

  'onboarding.signUp.existingAccount.login': 'Login',
  'onboarding.signUp.existingAccount.title': 'I already have an account',
  'onboarding.signUp.password': 'Password',
  'onboarding.signUp.signUp': 'Sign up',
  'onboarding.signUp.title': 'Sign up',
  'onboarding.signUp.userName': 'Username',

  'onboarding.welcome.apuu.link': 'Apuu-chat',
  'onboarding.welcome.button': 'Start',
  'onboarding.welcome.sekasin.link': 'Sekasin-chat',
  'onboarding.welcome.text1': 'Thank you for using Ylitse MentorApp',
  'onboarding.welcome.text2': 'Start a confidential conversation with a mentor',
  'onboarding.welcome.text3':
    'The service is intended for people over 17 years of age. If you are under 17 years old, you can visit the Apuu chat for 7-15 year olds or the Sekasin chat for 12-29 year olds.',
  'onboarding.welcome.text4': 'If you are under 15, you can visit:',
  'onboarding.welcome.text5': 'If you are under 17, you can visit:',
  'onboarding.welcome.text6': 'We hope you will enjoy the service!',
  'onboarding.welcome.title': 'Hello!',

  'tabs.chats': 'Chats',
  'tabs.mentors': 'Mentors',
  'tabs.settings': 'Settings',
};

