...
              paddingLeft: (PADDING / 2) * measuredWidth,
            }}
            data={mentorApi.sort(userId, mentors)}
            renderItem={renderMentorCard(height, measuredWidth, onPress)}
            keyExtractor={({ buddyId }) => buddyId}
            horizontal={true}
            testID={'components.mentorList'}
          />
        )}
      </RemoteData>
    </RN.View>
  );
};
...
